# Agentic_rag

./: .gitignore  app.py  main.py  pyproject.toml  requirements.txt  test.py
Agentic_rag/: main.py  pyproject.toml
Agentic_rag/Notebooks/: Agentic_rag.ipynb
Agentic_rag/static/: styles.css
Agentic_rag/templates/: index.html
Notebooks/: 10_baseline_eval.ipynb  20_sentence_window_retrieval.ipynb  Agentic_rag.ipynb  baseline_eval.ipynb
Notebooks/qa_pairs/: dataset_filtered.csv  default.sqlite  qa_pairs.ipynb  test.ipynb
data/: N.E.P.Q.-BLACK-BOOK-OF-QUESTIONS.pdf:Zone.Identifier  handbook.md
processed_data/processed/: qa_pairs.csv
processed_data/raw/: combined_qa_pair.csv  combined_qa_pair_2.csv  handbook.csv  pmg.csv
source_code/: prompt.py  sentence_window.py
templates/: component.html  index.html
